[package]
name = "tdf_config"
version = "0.1.2"
authors = ["qiuzhanghua <qiuzhanghua@icloud.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
lazy_static = "1.4"
cfg-if = "0.1"
r2d2 = "0.8"
r2d2_mysql = {version = "17"}
r2d2_postgres = {version = "0.16"}
r2d2_sqlite = "0.14"
r2d2_redis = {version = "0.13"}
mysql = {version = "17"}
postgres = {version = "0.17"}
tokio-postgres = "0.5"
postgres-shared = {version = "0.4", optional = true}
postgres-types = { version = "0.1", features = ["with-chrono-0_4"], optional = true}
# ["postgres-derive"]["bit-vec-06"]["chrono-04"]["eui48-04"]["geo-types-04"]
# ["serde-1", "serde_json-1"]with-time-0_2 = ["time-02"]with-uuid-0_8 = ["uuid-08"]

uuid = {version = "0.8", features = ["serde", "v4", "v5"]}
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.8" # https://github.com/RustCrypto/hashes

[features]
# default = ["with-postgres", "with-redis"]
with-postgres = ["postgres-shared", "postgres-types"]
# with-sqlite = ["rusqlite","r2d2_sqlite"]
with-mysql = []
with-redis = []